...
    android:layout_height="match_parent"
    tools:context=".AddToFoldersActivity">

    <!-- The folders list for listing all existing folders
     and choosing which ones to add notes to the folders. -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/folder_list_add_to_folders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"
        app:layout_constraintTop_toBottomOf="@id/add_new_folder_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:liftOnScroll="true"
        app:elevation="4dp">

        <!-- The Top App Bar. -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_add_to_folders"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:visibility="visible"
            app:title="@string/page_title_add_to_folders"
            android:background="?attr/colorSurface"
            app:navigationIcon="@drawable/go_back_icon"
...
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/view_space_add_to_folders"
        android:background="?attr/colorSurface">

        <!-- The button for adding new folder. -->
        <ImageButton
            android:id="@+id/add_new_folder_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
...
            app:endIconMode="clear_text"
            app:endIconContentDescription="@string/content_description_name_new_folder_clear_button">

            <!-- The actual Edittext(Material Edittext called TextInputEditText)
             which user types to name his new folder. -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_new_folder_text_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:fontFamily="@font/segoe_ui_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- The button for rejecting and not creating the folder. -->
        <ImageButton
            android:id="@+id/reject_new_folder_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
...
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/reject_icon"
            android:contentDescription="@string/content_description_reject_new_folder_button" />

        <!-- The button for accepting creating the new folder. -->
        <ImageButton
            android:id="@+id/accept_new_folder_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
